Created a new landing page

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "ZNA",
   "homepage": "https://github.com/ZachBach/earth-experiment",
   "name": "react-experiment",
   "version": "0.1.0",
